app background image updated

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/app-logo.png" />
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/ddtzx1ohw/image/upload/v1723274588/My%20Projects/chat_app/app-logo_owyp9h.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TwinTalks</title>
   </head>
